# biosonic

./: .gitignore  Pica_pica_Magpie_12_45.TextGrid  README.md  Sturnus_vulgaris_Starling_10_20.TextGrid  check-types.sh  example_usage.ipynb  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
biosonic/: biosonic.toml  compute.py  utils.py
compute/: spectral.py  temporal.py  utils.py
docs/source/: biosonic.compute.rst  biosonic.rst  conf.py  index.rst  modules.rst
normalized/: extracted_features.csv
src/biosonic/: filter.py  handle.py  plot.py  plotting.py  praat.py  synthesize.py  test_plots.ipynb
src/biosonic/compute/: modulation.py  pitch.py  spectral.py  spectrotemporal.py  temporal.py  utils.py
tests/: test_compute.py  test_handle.py  test_utils.py
