[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["biosonic", "compute", "plotting"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "biosonic"
version = "0.0"
dependencies = [
  "numpy>=1.26.4",
  "praat-parselmouth>=0.4.5",
  "scipy>=1.14",
]

requires-python = ">=3.8"

authors = [
  {name = "Lena Gies", email = "a12113065@unet.univie.ac.at"},
  {name = "Tecumseh Fitch", email = ""},
]
maintainers = [
  {name = "Lena Gies", email = "a12113065@unet.univie.ac.at"}
]

description = "The BioSonic package contains tools for bioacoustic analysis."
readme = "README.md"
keywords = ["bioacoustics", "signal", "sound synthesis", "biology", "singal processing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
praat = [
  "praat-parselmouth>=0.4.5",
]

[project.urls]
Homepage = "https://github.com/lenag23/biosonic.git"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/lenag23/biosonic.git"
"Bug Tracker" = "https://github.com/lenag23/biosonic/issues"