[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
strict = true
show_error_codes = true
pretty = true
exclude = ["tests/", "build/", "dist/"]

[project]
name = "biosonic"
version = "0.0"
dependencies = [
  "numpy>=1.26.4",
  "scipy>=1.12",
  "pandas>=2.3"
]

requires-python = ">=3.9"

authors = [
  {name = "Lena Gies", email = "a12113065@unet.univie.ac.at"},
  {name = "Tecumseh Fitch", email = "tecumseh.fitch@unet.univie.ac.at"},
]
maintainers = [
  {name = "Lena Gies", email = "a12113065@unet.univie.ac.at"}
]

description = "The BioSonic package contains tools for bioacoustic analysis."
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["bioacoustics", "signal", "sound synthesis", "biology", "singal processing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
plots = ["matplotlib.pyplot>=3.8"]
praat = ["praat-textgrids>=1.4.0"]

[project.urls]
Homepage = "https://github.com/lenag23/biosonic.git"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/lenag23/biosonic.git"
"Bug Tracker" = "https://github.com/lenag23/biosonic/issues"